Fix the 1px line flickering between sections

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -65,9 +65,9 @@ body:has(main > div.section.hero-video-section) {
  .section.hero-video-section > .video-wrapper::after {
    content: "";
    position: absolute;
-   bottom: 0;
+   bottom: -115px;
    left: 0;
-   height: 100%;
+   height: calc(100% + 115px);
    width: 100%;
    z-index: 1;
    background: linear-gradient(to bottom, rgb(231 237 243 / 0%) 0%, rgb(231 237 243 / 0%) 10%, rgb(231 237 243 / 100%) 70%, rgb(231 237 243 / 100%) 100%);
